--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="./style.css">
-<h1>6/2（月）の資料</h1>
-<a href="https://www.google.com">Google</a>
+<head>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <h1>6/2（月）の資料</h1>
+    <p>
+        <a href="https://algo.jeita.or.jp/prm/2/index.html" target="_blank" rel="noopener noreferrer">アルゴロジック２</a>
+    </p>
+    <p>
+        <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet</a>
+    </p>
+    <hr/>
+        <h3>フローチャートエディタ（試験中）</h3>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/" target="_blank" rel="noopener noreferrer">フローチャートエディタ</a>
+        </p>
+        <p>
+            <a href="https://docs.google.com/document/d/1sMU3Kg-ymZ5G-iHj4h6K6I-7JHgegnCcWThtsAWyCjs/edit?usp=sharing" target="_blank" rel="noopener noreferrer">使い方</a>
+        </p>
+    <hr/>
+</body>
