2-s1資料を更新

--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
 </head>
 
 <body>
-    <h1>6/2（月）の資料</h1>
     <p>
-        <a href="https://algo.jeita.or.jp/prm/2/index.html" target="_blank" rel="noopener noreferrer">アルゴロジック２</a>
+        <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
     </p>
-    <p>
-        <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet</a>
-    </p>
-    <hr/>
-        <h3>フローチャートエディタ（試験中）</h3>
-        <p>
-            <a href="https://takushikai2003.github.io/FlowChartEditor/" target="_blank" rel="noopener noreferrer">フローチャートエディタ</a>
-        </p>
-        <p>
-            <a href="https://docs.google.com/document/d/1sMU3Kg-ymZ5G-iHj4h6K6I-7JHgegnCcWThtsAWyCjs/edit?usp=sharing" target="_blank" rel="noopener noreferrer">使い方</a>
-        </p>
     <hr/>
 </body>
