--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
         <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
     </p>
     <hr/>
+    <div style="font-weight: bold;">更新履歴</div>
+    6/3 9:30 2-s1のスライドを公開しました
 </body>
