--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 
 <body>
     <p>
-        <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
+        <!-- <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a> -->
+        <a href="./20250604_2_2/index.html"><h2>6/4（水）2-2の資料</h2></a>
     </p>
     <hr/>
     <div style="font-weight: bold;">更新履歴</div>
+    6/4 10:30 2-2のページを公開しました
+    <br/>
     6/3 9:30 2-s1のスライドを公開しました
 </body>
