--- a/20250604_2_2/index.html
+++ b/20250604_2_2/index.html
@@ -14,7 +14,13 @@
     <hr/>
         <h3>フローチャートエディタ（試験中）</h3>
         <p>
-            <a href="https://takushikai2003.github.io/FlowChartEditor/" target="_blank" rel="noopener noreferrer">フローチャートエディタ</a>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=1" target="_blank" rel="noopener noreferrer">フローチャート問題１</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=2" target="_blank" rel="noopener noreferrer">フローチャート問題２</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=3" target="_blank" rel="noopener noreferrer">フローチャート問題３</a>
         </p>
         <p>
             <a href="https://docs.google.com/document/d/1sMU3Kg-ymZ5G-iHj4h6K6I-7JHgegnCcWThtsAWyCjs/edit?usp=sharing" target="_blank" rel="noopener noreferrer">使い方</a>
