--- a/20250604_2_2/index.html
+++ b/20250604_2_2/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>6/4（水）の資料</h1>
     <p>
-        <a href="https://docs.google.com/presentation/d/1LQeCri9WniDV_NndeRHt14qCymU0hU5TFh71FbMO960/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a>
+        <!-- <a href="https://docs.google.com/presentation/d/1LQeCri9WniDV_NndeRHt14qCymU0hU5TFh71FbMO960/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a> -->
     </p>
     <p>
         <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet</a>
