--- a/20250602_2_s1/index.html
+++ b/20250602_2_s1/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h1>6/2（月）の資料</h1>
+    <h1>2-s1　6/2（月）の資料</h1>
     <p>
         <a href="https://docs.google.com/presentation/d/1LQeCri9WniDV_NndeRHt14qCymU0hU5TFh71FbMO960/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a>
     </p>
@@ -13,8 +13,15 @@
     </p> -->
     <hr/>
         <h3>フローチャートエディタ（試験中）</h3>
+        <h3>フローチャートエディタ（試験中）</h3>
         <p>
-            <a href="https://takushikai2003.github.io/FlowChartEditor/" target="_blank" rel="noopener noreferrer">フローチャートエディタ</a>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=1" target="_blank" rel="noopener noreferrer">フローチャート問題１</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=2" target="_blank" rel="noopener noreferrer">フローチャート問題２</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=3" target="_blank" rel="noopener noreferrer">フローチャート問題３</a>
         </p>
         <p>
             <a href="https://docs.google.com/document/d/1sMU3Kg-ymZ5G-iHj4h6K6I-7JHgegnCcWThtsAWyCjs/edit?usp=sharing" target="_blank" rel="noopener noreferrer">使い方</a>
