--- a/20250604_2_2/index.html
+++ b/20250604_2_2/index.html
@@ -4,12 +4,15 @@
 </head>
 
 <body>
-    <h1>6/4（水）の資料</h1>
+    <h1>2-2 6/4（水）の資料</h1>
     <p>
-        <!-- <a href="https://docs.google.com/presentation/d/1LQeCri9WniDV_NndeRHt14qCymU0hU5TFh71FbMO960/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a> -->
+        <a href="https://docs.google.com/presentation/d/1_c3eCcwonoJz62lWXVF4CwOSi8OKDmlHIl7sww6AWqg/edit?usp=drive_link" target="_blank" rel="noopener noreferrer">スライド</a>
     </p>
+    <p> 問３が解けた人、参考のために
+        <a href="https://drive.google.com/drive/folders/1CfRH-DR8AWNlxk08JRqvFSYEMgW_twc0?usp=sharing" target="_blank" rel="noopener noreferrer">ここ</a>
+        スクショなどを上げてくれると嬉しいです
     <p>
-        <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet</a>
+        <!-- <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet</a> -->
     </p>
     <hr/>
         <h3>フローチャートエディタ（試験中）</h3>
