--- a/20250605_2_s2/index.html
+++ b/20250605_2_s2/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h1>2-22 6/5（木）の資料</h1>
+    <h1>2-s2 6/5（木）の資料</h1>
     <!-- <p>
         <a href="https://docs.google.com/presentation/d/1_c3eCcwonoJz62lWXVF4CwOSi8OKDmlHIl7sww6AWqg/edit?usp=drive_link" target="_blank" rel="noopener noreferrer">スライド</a>
     </p> -->
