--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
 </head>
 
 <body>
-    <p>
+    <h1>2-s2 6/5（木）の資料</h1>
+        <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet（スライドが見にくい人用）</a>
+    </p>
+    <hr/>
+        <h3>フローチャートエディタ</h3>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=1" target="_blank" rel="noopener noreferrer">フローチャート課題１</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=2" target="_blank" rel="noopener noreferrer">フローチャート課題２</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=4" target="_blank" rel="noopener noreferrer">フローチャート課題３</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=5" target="_blank" rel="noopener noreferrer">フローチャート課題４</a>
+        </p>
+        <p>
+            <a href="https://takushikai2003.github.io/FlowChartEditor/index.html?q=3" target="_blank" rel="noopener noreferrer">フローチャート課題５（チャレンジ問題）</a>
+        </p>
+        <p>
+            <a href="https://docs.google.com/document/d/1sMU3Kg-ymZ5G-iHj4h6K6I-7JHgegnCcWThtsAWyCjs/edit?usp=sharing" target="_blank" rel="noopener noreferrer">使い方</a>
+        </p>
+    <hr/>
+    <!-- <p>
         <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
         <a href="./20250604_2_2/index.html"><h2>6/4（水）2-2の資料</h2></a>
+        <a href="./20250605_2_s2/index.html"><h2>6/5（木）2-s2の資料</h2></a>
     </p>
     <hr/>
     <div style="font-weight: bold;">更新履歴</div>
@@ -14,5 +39,5 @@
     <br/>
     6/4 10:30 2-2のページを公開しました
     <br/>
-    6/3 9:30 2-s1のスライドを公開しました
+    6/3 9:30 2-s1のスライドを公開しました -->
 </body>
