--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h1>2-s2 6/5（木）の資料</h1>
+    <h1>2-5 6/6（金）の資料</h1>
         <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet（スライドが見にくい人用）</a>
     </p>
     <hr/>
