--- a/20250606_2_5/index.html
+++ b/20250606_2_5/index.html
@@ -4,9 +4,9 @@
 </head>
 
 <body>
-    <h1>2-s2 6/5（木）の資料</h1>
+    <h1>2-5 6/6（金）の資料</h1>
     <p>
-        <a href="https://docs.google.com/presentation/d/1s_k2r9rv1gzivMkPB4v_5hJYShmWgh2jDRTg_qb7mQk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a>
+        <a href="https://docs.google.com/presentation/d/1x4NhyEMoPp21ebQPX_tHEw9vmSWoCnVmh2mdLaG5VqU/edit?usp=sharing" target="_blank" rel="noopener noreferrer">スライド</a>
     </p>
     <!-- <p>
         <a href="https://meet.google.com/vsk-bhrz-yuk" target="_blank" rel="noopener noreferrer">Google Meet（スライドが見にくい人用）</a>
