--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
         <a href="./20250606_2_5/index.html"><h2>6/6（金）2-5の資料</h2></a>
     </p>
     <hr/>
+    <a href="https://github.com/takushikai2003/FlowChartEditor">フローチャートエディタのプログラム</a>
+
+    <hr/>
+
     <div style="font-weight: bold;">更新履歴</div>
+    6/11 02:30 フローチャートエディタのプログラムを公開しました
+    <br/>
     6/7 13:30 2-s2,2-5の資料を公開しました
     <br/>
     6/4 14:30 2-2のページを更新しました
