--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 
 <body>
     <p>
-        <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
+        <!-- <a href="./20250602_2_s1/index.html"><h2>6/2（月）2-s1の資料</h2></a>
         <a href="./20250604_2_2/index.html"><h2>6/4（水）2-2の資料</h2></a>
         <a href="./20250605_2_s2/index.html"><h2>6/5（木）2-s2の資料</h2></a>
-        <a href="./20250606_2_5/index.html"><h2>6/6（金）2-5の資料</h2></a>
+        <a href="./20250606_2_5/index.html"><h2>6/6（金）2-5の資料</h2></a> -->
+        <a href="./latest/index.html"><h2>資料最終版</h2></a>
     </p>
     <hr/>
     <a href="https://github.com/takushikai2003/FlowChartEditor">フローチャートエディタのプログラム</a>
@@ -16,6 +17,8 @@
     <hr/>
 
     <div style="font-weight: bold;">更新履歴</div>
+    10/29 03:33 資料を整理しました
+    <br/>
     6/11 02:30 フローチャートエディタのプログラムを公開しました
     <br/>
     6/7 13:30 2-s2,2-5の資料を公開しました
